crates/goby-cli/tests/fixtures/type_mismatch_arg_expected.txt
crates/goby-cli/tests/fixtures/type_mismatch_arg_input.gb:7:9: error: `f` expects argument of type `Int` but got `String` in 'main'
7 |   b = f value
  |         ^^^^^
